# bazel-rules_js-poc

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/app-a/: BUILD.bazel  index.ts  package.json  tsconfig.json
lib/lib-a/: BUILD.bazel  index.ts  package.json  tsconfig.json
lib/lib-data/: BUILD.bazel  data.json  index.ts  package.json  tsconfig.json
