load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
        ":tsconfig.json",
    ],
)

ts_project(
    name = "app-a",
    srcs = [
        "index.ts",
    ],
    composite = True,
    tsconfig = ":tsconfig",
    deps = [
      "//lib/lib-a",
      "@npm//:node_modules",
    ],
)
