load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")


package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
])

npm_link_all_packages(
    name = "node_modules"
)

ts_project(
    name = "app-a",
    srcs = [
        "index.ts",
    ],
    tsconfig = ":tsconfig.json",
    declaration = True,
    resolve_json_module = True,
    deps = [
       "//lib/lib-a",
       "//lib/lib-data",
        "//:node_modules",
       ":node_modules",
    ],
)

js_binary(
    name = "main",
    # chdir = package_name(),
    data = [
        ":package.json",
        ":app-a",
    ],
    entry_point = "index.js",
)
