load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
])

npm_link_all_packages(
    name = "node_modules"
)

ts_project(
    name = "lib-a",
    declaration = True,
    srcs = [
        "index.ts",
    ],
    deps = [
        ":node_modules",
    ],
    tsconfig = ":tsconfig.json",
)
