load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "data.json",
    "tsconfig.json",
])

npm_link_all_packages(
    name = "node_modules"
)

ts_project(
    name = "lib-data",
    declaration = True,
    srcs = [
        "data.json",
        "index.ts",
    ],
    tsconfig = ":tsconfig.json",
    resolve_json_module = True,
)

