load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")
 
package(default_visibility = ["//visibility:public"])

exports_files([
    "data.json",
    "tsconfig.json",
])

npm_link_all_packages(
    name = "node_modules"
)

ts_project(
    name = "lib-data_ts",
    declaration = True,
    srcs = [
        "data.json",
        "index.ts",
    ],
    tsconfig = ":tsconfig.json",
    resolve_json_module = True,
)

js_library(
    name = "lib-data",
    deps = [
        ":lib-data_ts",
    ],
    srcs = [
        ":data.json",
    ]
)